--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,10 @@ spring:
     url: jdbc:mysql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?serverTimezone=Asia/Seoul
     username: ${DATABASE_USER}
     password: ${DATABASE_PASSWORD}
+  data:
+    redis:
+      port: 6379
+      host: localhost
 
 jwt:
   secret: ${JWT_SECRET}
