--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
 
+  data:
+    redis:
+      port: 6379
+      host: localhost
+
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
