fix: 기존 8080 프로세스 종료 스크립트

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,5 +24,10 @@ jobs:
           script: |
             cd /home/ubuntu/INTER-LINK/
             git pull origin main
+            
+            rm -rf node_modules
+            npm cache clean --force
             npm install
-            nohup npm start &
+            
+            lsof -t -i:8080 | xargs -r kill
+            nohup npm start > app.log 2>&1 &
