style: 예매 화면 레이아웃 재설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,5 @@ jwt:
   secret: ${JWT_SECRET}
   accessExpiration: ${JWT_ACCESS_EXPIRATION}
   issuer: ${JWT_ISSUER}
+
+spring.mvc.static-path-pattern: /static/**
