--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,12 +9,8 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - name: Checkout PR
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.push.base_ref }}
-
-      - name: Deploy
+      # SSH를 통한 배포
+      - name: Deploy to server
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -22,12 +18,9 @@ jobs:
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_KEY }}
           script: |
-            cd /home/ubuntu/INTER-LINK/
+            cd /home/ec2-user/INTER-LINK/
             git pull origin main
-            
-            rm -rf node_modules
-            npm cache clean --force
-            npm install
-            
-            lsof -t -i:8080 | xargs -r kill
-            nohup npm start > app.log 2>&1 &
+            ./gradlew build -x test
+            sudo systemctl stop demo.service
+            sudo cp build/libs/*.jar /opt/demo/demo.jar
+            sudo systemctl start demo.service
